--- a/Ejecutable/templates/record_academico.html
+++ b/Ejecutable/templates/record_academico.html
@@ -275,6 +275,7 @@
           </table>
           <span class="promedio-ponderado2">Promedio Ponderado: 14.15</span>
 
+          <span class="background-semestre3"></span>
           <h3 class="semestre3">Semestre : 2021-1</h3>
           <table class="tres">
             <thead>
@@ -287,42 +288,42 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr class="seccion13">
                 <td class="cod">003177</td>
                 <td class="curso3">BASES MOLECULARES Y CELULARES DE LA MEDICINA III</td>
                 <td class="crd3">4</td>
                 <td class="ciclo3">03</td>
                 <td class="nota3">13</td>
               </tr>
-              <tr>
+              <tr class="seccion14">
                 <td class="cod">003178</td>
                 <td class="curso3">CIENCIAS DE LA CONDUCTA APLICADAS A LA MEDICINA</td>
                 <td class="crd3">2</td>
                 <td class="ciclo3">03</td>
                 <td class="nota3">17</td>
               </tr>
-              <tr>
+              <tr class="seccion15">
                 <td class="cod">003179</td>
                 <td class="curso3">ESTRUCTURA Y FUNCIÓN DE LOS SISTEMAS DEL CUERPO HUMANO II</td>
                 <td class="crd3">8</td>
                 <td class="ciclo3">03</td>
                 <td class="nota3">15</td>
               </tr>
-              <tr>
+              <tr class="seccion16">
                 <td class="cod">003182</td>
                 <td class="curso3">NUEVAS TECNOLOGÍAS DE LA INFORMACIÓN Y LA COMUNICACIÓN (NTICs)</td>
                 <td class="crd3">2</td>
                 <td class="ciclo3">03</td>
                 <td class="nota3">17</td>
               </tr>
-              <tr>
+              <tr class="seccion17">
                 <td class="cod">003180</td>
                 <td class="curso3">HISTORIA DE LA MEDICINA Y MEDICINA TRADICIONAL</td>
                 <td class="crd3">2</td>
                 <td class="ciclo3">03</td>
                 <td class="nota3">18</td>
               </tr>
-              <tr>
+              <tr class="seccion18">
                 <td class="cod">003181</td>
                 <td class="curso3">MÉTODOS ESTADÍSTICOS</td>
                 <td class="crd3">2</td>
@@ -333,6 +334,7 @@
           </table>
           <span class="promedio-ponderado3">Promedio Ponderado: 15.2</span>
 
+          <span class="background-semestre4"></span>
           <h3 class="semestre4">Semestre : 2021-2</h3>
           <table class="cuatro">
             <thead>
@@ -345,35 +347,35 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr class="seccion19">
                 <td class="cod">003183</td>
                 <td class="curso4">ESTRUCTURA Y FUNCIÓN DE LOS SISTEMAS DEL CUERPO HUMANO III</td>
                 <td class="crd4">9</td>
                 <td class="ciclo4">04</td>
                 <td class="nota4">12</td>
               </tr>
-              <tr>
+              <tr class="seccion20">
                 <td class="cod">003184</td>
                 <td class="curso4">INMUNOLOGÍA</td>
                 <td class="crd4">2</td>
                 <td class="ciclo4">04</td>
                 <td class="nota4">14</td>
               </tr>
-              <tr>
+              <tr class="seccion21">
                 <td class="cod">003185</td>
                 <td class="curso4">MICROBIOLOGÍA MÉDICA</td>
                 <td class="crd4">4</td>
                 <td class="ciclo4">04</td>
                 <td class="nota4">14</td>
               </tr>
-              <tr>
+              <tr class="seccion22">
                 <td class="cod">003186</td>
                 <td class="curso4">PARASITOLOGÍA</td>
                 <td class="crd4">3</td>
                 <td class="ciclo4">04</td>
                 <td class="nota4">11</td>
               </tr>
-              <tr>
+              <tr class="seccion23">
                 <td class="cod">003187</td>
                 <td class="curso4">SALUD COMUNITARIA</td>
                 <td class="crd4">3</td>
@@ -384,6 +386,7 @@
           </table>
           <span class="promedio-ponderado4">Promedio Ponderado: 12.857</span>
 
+          <span class="background-semestre5"></span>
           <h3 class="semestre5">Semestre : 2022-1</h3>
           <table class="cinco">
             <thead>
@@ -396,35 +399,35 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr class="seccion24">
                 <td class="cod">003189</td>
                 <td class="curso5">INTEGRADORA I</td>
                 <td class="crd5">6</td>
                 <td class="ciclo5">05</td>
                 <td class="nota5">11</td>
               </tr>
-              <tr>
+              <tr class="seccion25">
                 <td class="cod">003190</td>
                 <td class="curso5">PATOLOGÍA GENERAL</td>
                 <td class="crd5">5</td>
                 <td class="ciclo5">05</td>
                 <td class="nota5">11</td>
               </tr>
-              <tr>
+              <tr class="seccion26">
                 <td class="cod">003188</td>
                 <td class="curso5">EPIDEMIOLOGÍA</td>
                 <td class="crd5">2</td>
                 <td class="ciclo5">05</td>
                 <td class="nota5">14</td>
               </tr>
-              <tr>
+              <tr class="seccion27">
                 <td class="cod">003192</td>
                 <td class="curso5">INGLÉS EN SALUD</td>
                 <td class="crd5">2</td>
                 <td class="ciclo5">05</td>
                 <td class="nota5">14</td>
               </tr>
-              <tr>
+              <tr class="seccion28">
                 <td class="cod">003191</td>
                 <td class="curso5">TERAPÉUTICA Y CUIDADOS PALIATIVOS</td>
                 <td class="crd5">5</td>
@@ -435,6 +438,7 @@
           </table>
           <span class="promedio-ponderado5">Promedio Ponderado: 12.2</span>
 
+          <span class="background-semestre6"></span>
           <h3 class="semestre6">Semestre : 2022-2</h3>
           <table class="seis">
             <thead>
@@ -447,35 +451,35 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr class="seccion29">
                 <td class="cod">003175</td>
                 <td class="curso6">FISIOPATOLOGÍA I</td>
                 <td class="crd6">6</td>
                 <td class="ciclo6">06</td>
                 <td class="nota6">13</td>
               </tr>
-              <tr>
+              <tr class="seccion30">
                 <td class="cod">003190</td>
                 <td class="curso6">GENÉTICA MÉDICA I</td>
                 <td class="crd6">5</td>
                 <td class="ciclo6">06</td>
                 <td class="nota6">11</td>
               </tr>
-              <tr>
+              <tr class="seccion31">
                 <td class="cod">003173</td>
                 <td class="curso6">BIOÉTICA</td>
                 <td class="crd6">2</td>
                 <td class="ciclo6">06</td>
                 <td class="nota6">12</td>
               </tr>
-              <tr>
+              <tr class="seccion32">
                 <td class="cod">003192</td>
                 <td class="curso6">MEDICINA INTERCULTURAL</td>
                 <td class="crd6">2</td>
                 <td class="ciclo6">06</td>
                 <td class="nota6">14</td>
               </tr>
-              <tr>
+              <tr class="seccion33">
                 <td class="cod">003187</td>
                 <td class="curso6">PATOLOGÍA DE LOS SISTEMAS</td>
                 <td class="crd6">5</td>
@@ -486,6 +490,7 @@
           </table>
           <span class="promedio-ponderado6">Promedio Ponderado: 12.2</span>
 
+          <span class="background-semestre7"></span>
           <h3 class="semestre7">Semestre : 2023-1</h3>
           <table class="siete">
             <thead>
@@ -498,35 +503,35 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr class="seccion34">
                 <td class="cod">005723</td>
                 <td class="curso7">DIDACTIVAS ACTIVAS EN LA COMUNICACION Y EL APRENDIZAJE</td>
                 <td class="crd7">2</td>
                 <td class="ciclo7">07</td>
                 <td class="nota7">14</td>
               </tr>
-              <tr>
+              <tr class="seccion35">
                 <td class="cod">003189</td>
                 <td class="curso7">INTEGRADORA II</td>
                 <td class="crd7">6</td>
                 <td class="ciclo7">07</td>
                 <td class="nota7">08</td>
               </tr>
-              <tr>
+              <tr class="seccion36">
                 <td class="cod">003223</td>
                 <td class="curso7">ESTRUCTURA Y FUNCION DE LOS SISTEMAS DEL CUERPO HUMANO IV</td>
                 <td class="crd7">6</td>
                 <td class="ciclo7">07</td>
                 <td class="nota7">13</td>
               </tr>
-              <tr>
+              <tr class="seccion37">
                 <td class="cod">003175</td>
                 <td class="curso7">REDACCION Y PUBLICACION DE ARTICULOS I</td>
                 <td class="crd7">4</td>
                 <td class="ciclo7">07</td>
                 <td class="nota7">13</td>
               </tr>
-              <tr>
+              <tr class="seccion38">
                 <td class="cod">003204</td>
                 <td class="curso7">QUECHUA EN SALUD</td>
                 <td class="crd7">2</td>
@@ -537,6 +542,7 @@
           </table>
           <span class="promedio-ponderado7">Promedio Ponderado: 12</span>
 
+          <span class="background-semestre8"></span>
           <h3 class="semestre8">Semestre : 2023-2</h3>
           <table class="ocho">
             <thead>
@@ -549,28 +555,28 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr class="seccion39">
                 <td class="cod">005725</td>
                 <td class="curso8">PROTECCION DEL MEDIO AMBIENTE Y DESARROLLO SOSTENIBLE</td>
                 <td class="crd8">2</td>
                 <td class="ciclo8">08</td>
                 <td class="nota8">13</td>
               </tr>
-              <tr>
+              <tr class="seccion40">
                 <td class="cod">003189</td>
                 <td class="curso8">INTEGRADORA II</td>
                 <td class="crd8">6</td>
                 <td class="ciclo8">08</td>
                 <td class="nota8">12</td>
               </tr>
-              <tr>
+              <tr class="seccion41">
                 <td class="cod">003173</td>
                 <td class="curso8">FISIOPATOLOGÍA</td>
                 <td class="crd8">6</td>
                 <td class="ciclo8">08</td>
                 <td class="nota8">13</td>
               </tr>
-              <tr>
+              <tr class="seccion42">
                 <td class="cod">003191</td>
                 <td class="curso8">METODOLOGIA DE LA SALUD</td>
                 <td class="crd8">2</td>
@@ -581,6 +587,7 @@
           </table>
           <span class="promedio-ponderado8">Promedio Ponderado: 12.5</span>
 
+          <span class="background-semestre9"></span>
           <h3 class="semestre9">Semestre : 2024-1</h3>
           <table class="nueve">
             <thead>
@@ -593,35 +600,35 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr class="seccion43">
                 <td class="cod">093501</td>
                 <td class="curso9">ATENCION DEL CLIENTE EN SALUD MENTAL</td>
                 <td class="crd9">5</td>
                 <td class="ciclo9">09</td>
                 <td class="nota9">16</td>
               </tr>
-              <tr>
+              <tr class="seccion44">
                 <td class="cod">093601</td>
                 <td class="curso9">CLINICA Y TERAPEUTICA EN CIRUGIA I</td>
                 <td class="crd9">9</td>
                 <td class="ciclo9">09</td>
                 <td class="nota9">15</td>
               </tr>
-              <tr>
+              <tr class="seccion45">
                 <td class="cod">093801</td>
                 <td class="curso9">MEDICINA LEGAL</td>
                 <td class="crd9">2</td>
                 <td class="ciclo9">09</td>
                 <td class="nota9">17</td>
               </tr>
-              <tr>
+              <tr class="seccion46">
                 <td class="cod">093901</td>
                 <td class="curso9">REDACCION Y PUBLICACION DE ARTICULOS II</td>
                 <td class="crd9">2</td>
                 <td class="ciclo9">09</td>
                 <td class="nota9">16</td>
               </tr>
-              <tr>
+              <tr class="seccion47">
                 <td class="cod">093701</td>
                 <td class="curso9">ELECTIVO 4</td>
                 <td class="crd9">2</td>
@@ -632,21 +639,34 @@
           </table>
           <span class="promedio-ponderado9">Promedio Ponderado: 15.55</span>
 
-          <h3>Resumen</h3>
-          <p>Total de Cursos Aprobados: 46</p>
-          <p>Total de Créditos Aprobados: 177</p>
-          <p>Promedio Ponderado General: 15.310</p>
+          <h3 class="Resumen">Resumen</h3>
+          <p class="total_cursos">Total de Cursos Aprobados: 46</p>
+          <p class="total_creditos">Total de Créditos Aprobados: 177</p>
+          <p class="promedio_ponderado">Promedio Ponderado General: 15.310</p>
 
-          <p>
+          <p class="nota_informativa">
             NOTA: Este reporte carece de valor sin la firma y sello del
             Departamento de Registro Técnico
           </p>
+          <p class="sin_valor">SIN VALOR OFICIAL</p>
         </div>
       </div>
     </div>
     <footer>
       <p>UPSJB © 2024. Todos los derechos reservados.</p>
     </footer>
+    <div class="boton-imprimir">
+      <button>Imprimir</button>
+    </div>
+    <div class="boton-flecha">
+      <button>
+        <img src="/static/images/ultima_flecha.png" alt="Flecha" class="flecha">
+      </button>
+    </div>
+    <div class="fecha-hora">
+      <p class="fecha">Fecha: <span id="fecha"></span></p>
+      <p class="hora">Hora: <span id="hora"></span></p>
+    </div>
     <script src="/static/scripts/record_academico.js"></script>
   </body>
 </html>
